@@ -275,7 +275,7 @@ $_LANG['Are you sure that you want to logout?'] = 'Czy na pewno chcesz się wylo
 $_LANG['Are you sure that you want to remove'] = 'Czy na pewno chcesz usunąć';
 $_LANG['Are you sure, you want to account ALL debts of customer \'$a\'?'] = 'Jesteś pewien, że chcesz rozliczyć WSZYSTKIE należności użytkownika \'$a\'?';
 $_LANG['Are you sure, you want to assign new addresses for all computers? Remember, it can make problems for your network!'] = 'Jesteś pewien, że chcesz przypisać nowe adresy do wszystkich komputerów? Pamiętaj, to może stwarzać problemy w twojej sieci!';
-$_LANG['Are you sure, you want to change network $a to network \'+getText(\'mapto\')+\'?'] = 'Jesteś pewien, że chcesz przeadresować sieć $a do sieci \'+getText(\'mapto\')+\'?';
+$_LANG['Are you sure, you want to change network \'$a\' to network \'$b\'?'] = 'Jesteś pewien, że chcesz przeadresować sieć \'$a\' do sieci \'$b\'?';
 $_LANG['Are you sure, you want to check/uncheck selected invoices as accounted?'] = 'Jesteś pewien, że chcesz zaznaczyć/odznaczyć wybrane faktury jako rozliczone?';
 $_LANG['Are you sure, you want to delete account \'$a\' and all assigned to them aliases?'] = 'Jesteś pewien, że chcesz usunąć konto \'$a\' oraz wszystkie aliasy z nim skojarzone?';
 $_LANG['Are you sure, you want to delete address \'$a\' from database?'] = 'Jesteś pewien, że chcesz usunąć adres \'$a\' z bazy danych?';
@@ -332,6 +332,7 @@ $_LANG['Are you sure, you want to permanently remove ticket $a?'] = 'Jesteś pew
 $_LANG['Are you sure, you want to restore ticket $a?'] = 'Jesteś pewien, że chcesz przywrócić zgłoszenie nr $a?';
 $_LANG['Are you sure, you want to reorder that network?'] = 'Jesteś pewien, że chcesz uporządkować sieć?';
 $_LANG['Are you sure, you want to restore this database backup?'] = 'Jesteś pewien, że chcesz przywrócić tę kopię bazy danych?';
+$_LANG['Are you sure, you want to restore this database backup?\n\nWARNING!\n\nIt will backup current database content automatically'] = 'Jesteś pewien, że chcesz przywrócić tę kopię bazy danych?\n\nUWAGA!\n\n Spowoduje to automatyczne utworzenie kopii zapasowej obecnej bazy danych';
 $_LANG['Are you sure, you want to remove investment project \'$a\'?'] = 'Jesteś pewien, że chcesz usunąć projekt inwestycyjny \'$a\'?';
 $_LANG['ascending'] = 'rosnąco';
 $_LANG['Assigned:'] = 'Korzysta:';
